--- a/app/Blueprints/site/templates/admin/batch/browse.html
+++ b/app/Blueprints/site/templates/admin/batch/browse.html
@@ -13,8 +13,8 @@
     </div>
     <br><br>
     <div class="Board">
-      <span class="button"><a href="#"><i class="fas fa-plus-circle"></i><p>Add Batch</p></a></span>
-      <span class="button"><a href="#"><i class="fas fa-user-friends"></i><p>Browse Batches</p></a></span>
+      <span class="button"><a href="/batch/new"><i class="fas fa-plus-circle"></i><p>Add Batch</p></a></span>
+      <span class="button"><a href="/batch"><i class="fas fa-user-friends"></i><p>Browse Batches</p></a></span>
       <br><br><br>
       <p class="sub1"><i class="fas fa-chevron-right"></i>Currently Registered Batches</p>
       <br><br>
@@ -40,7 +40,7 @@
                 <td>{{batch.duration}}</td>
                 <td>
                   <a href="#">About</a>
-                  <a href="#">Delete</a>
+                  <a href="/batch/delete/{{batch.id}}">Delete</a>
                   <a href="#">Update</a>
                 </td>
             </tr>
