--- a/app/Blueprints/site/templates/admin/batch/create_batch.html
+++ b/app/Blueprints/site/templates/admin/batch/create_batch.html
@@ -19,26 +19,44 @@
         <br><br>
 
         <div class="BatchForm">
-          <form class="" action="/" method="post">
+          <form class="" action="" method="post">
             <input type="text" name="name" placeholder="Name" /><br>
-            <input type="time" name="time" placeholder="Select Time" /><br>
+            <input type="text" name="time" id="timepicker" placeholder="Select Time" /><br>
             <input type="text" name="duration" placeholder="Duration (Minutes)" /><br>
             <br>
             <p style="font-size:18px;" class="sub1"><i class="fas fa-caret-right"></i>Select Days</p>
             <br>
             <label><input type="checkbox" name="dayList[]" value="0"><span class="checkmark"></span> Monday</label><br>
-            <label><input type="checkbox" name="dayList[]" value="0"><span class="checkmark"></span> Tuesday</label><br>
-            <label><input type="checkbox" name="dayList[]" value="0"><span class="checkmark"></span> Wednesday</label><br>
-            <label><input type="checkbox" name="dayList[]" value="0"><span class="checkmark"></span> Thursday</label><br>
-            <label><input type="checkbox" name="dayList[]" value="0"><span class="checkmark"></span> Friday</label><br>
-            <label><input type="checkbox" name="dayList[]" value="0"><span class="checkmark"></span> Saturday</label><br>
-            <label><input type="checkbox" name="dayList[]" value="0"><span class="checkmark"></span> Sunday</label>
+            <label><input type="checkbox" name="dayList[]" value="1"><span class="checkmark"></span> Tuesday</label><br>
+            <label><input type="checkbox" name="dayList[]" value="2"><span class="checkmark"></span> Wednesday</label><br>
+            <label><input type="checkbox" name="dayList[]" value="3"><span class="checkmark"></span> Thursday</label><br>
+            <label><input type="checkbox" name="dayList[]" value="4"><span class="checkmark"></span> Friday</label><br>
+            <label><input type="checkbox" name="dayList[]" value="5"><span class="checkmark"></span> Saturday</label><br>
+            <label><input type="checkbox" name="dayList[]" value="6"><span class="checkmark"></span> Sunday</label>
+            <br>
+            <p style="font-size:18px;" class="sub1"><i class="fas fa-caret-right"></i>Select course</p>
+            <br>
+            {% for course in courses %}
+                <label><input type="radio" name="course" value="{{course.id}}"><span class="checkmark"></span> {{course.name}}</label><br>
+            {% endfor %}
+            <br>
+            <p style="font-size:18px;" class="sub1"><i class="fas fa-caret-right"></i>Select Students</p>
+            <br>
+            {% for student in students %}
+                <label><input type="checkbox" name="studentList[]" value="{{student.id}}"><span class="checkmark"></span> {{student.fname}} {{student.lname}}</label><br>
+            {% endfor %}
             <button><i class="fas fa-plus-circle"></i>Add</button>
           </form>
         </div>
       </div>
     </div>
   </div>
+
+  <script>
+          $("#timepicker").timepicker({
+              timeFormat : 'H:m:s',
+          })
+  </script>
 {% endblock %}
 
 
@@ -76,10 +94,4 @@
             for="student{{student.id}}">{{student.fname+" "+student.lname}}</label><br>
         {% endfor %}
         <button>add batch</button>
-    </form>
-
-<script>
-        $("#timepicker").timepicker({
-            timeFormat : 'H:i:s',
-        })
-</script> -->
+    </form> -->
