--- a/app/Blueprints/site/templates/admin/module/add_module.html
+++ b/app/Blueprints/site/templates/admin/module/add_module.html
@@ -14,7 +14,7 @@
     <br><br>
 
     <div class="Board">
-      <span class="button"><a href="#"><i class="fas fa-bookmark"></i><p>Browse Modules</p></a></span>
+      <span class="button"><a href="/module"><i class="fas fa-bookmark"></i><p>Browse Modules</p></a></span>
       <br><br><br>
       <p class="sub1"><i class="fas fa-chevron-right"></i>Add New Modules</p>
       <br><br>
