--- a/app/Blueprints/site/templates/admin/module/browse.html
+++ b/app/Blueprints/site/templates/admin/module/browse.html
@@ -14,8 +14,8 @@
     <br><br>
 
     <div class="Board">
-      <span class="button"><a href="#"><i class="fas fa-plus-circle"></i><p>Add Module</p></a></span>
-      <span class="button"><a href="#"><i class="fas fa-bookmark"></i><p>Browse Module</p></a></span>
+      <span class="button"><a href="/module/new"><i class="fas fa-plus-circle"></i><p>Add Module</p></a></span>
+      <span class="button"><a href="/module"><i class="fas fa-bookmark"></i><p>Browse Module</p></a></span>
       <br><br><br>
       <p class="sub1"><i class="fas fa-chevron-right"></i>Currently Registered Modules</p>
       <br><br>
@@ -27,6 +27,7 @@
               <th>Name</th>
               <th>Description</th>
               <th>Duration (Days)</th>
+              <th>Maximum marks</th>
               <th>Action</th>
           </tr>
         </thead>
@@ -37,6 +38,7 @@
                     <td>{{module.name}}</td>
                     <td>{{module.desc}}</td>
                     <td>{{module.duration}}</td>
+                    <td>{{module.maxMarks}}</td>
                     <td><a href="/module/update/{{module.id}}">update</a>&nbsp;<a href="/module/delete/{{module.id}}">delete</a></td>
                 </tr>
             {% endfor %}
