--- a/app/Blueprints/site/templates/admin/test/create_test.html
+++ b/app/Blueprints/site/templates/admin/test/create_test.html
@@ -34,6 +34,9 @@
           <br>
           <p style="font-size:18px;" class="sub1"><i class="fas fa-caret-right"></i>Select Student</p><br>
           <div id="loadStudents"></div>
+          <br>
+          <p style="font-size:18px;" class="sub1"><i class="fas fa-caret-right"></i>Select Modules</p><br>
+          <div id="loadModules"></div>
           <input type="text" name="type" placeholder="Type of Test" /><br><br>
           <button><i class="fas fa-plus-circle"></i>Add</button>
         </form>
@@ -51,9 +54,10 @@
           });
     	} );
 
-  	function fetchStudents(){
+  	function loadProps(){
   	    var val = $("#batch option:selected").val();
   	    $("#loadStudents").html("");
+        $("#loadModules").html("");
   	    $.ajax({
               url: "/api/batch/students/"+val,
               dataType: "json",
@@ -68,14 +72,28 @@
                   })
               }
           })
+          $.ajax({
+              url : "/api/batch/"+val+"/modules",
+              dataType : "json",
+              type : "GET",
+              data:{
+                  'key': "94l5ezGDw7EsHF9a"
+              },
+              success: function(data){
+                  $.each(data, function(key, value){
+                      var div = '<label><input type="radio" name="module" value="'+value['module_id']+'" /> <span class="checkmark"></span> '+value['module_name']+'</label><br />';
+                      $("#loadModules").append(div);
+                  });
+              }
+          })
       }
 
   	$(document).ready(function(){
-  	   fetchStudents()
+  	   loadProps()
       });
 
   	$("#batch").change(function(){
-          fetchStudents()
+          loadProps()
       });
   </script>
 
