added graph for batches

--- a/app/Blueprints/site/templates/admin/batch/about.html
+++ b/app/Blueprints/site/templates/admin/batch/about.html
@@ -1,10 +1,100 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'admin/master.html' %}
 
-</body>
-</html>
+{% block head %}
+{{ super() }}
+<script src="https://d3js.org/d3.v5.min.js"></script>
+<script src="https://d3js.org/d3-dsv.v1.min.js"></script>
+{% endblock %}
+
+{% block body %}
+<h2> Batch {{ batch.name }} </h2>
+
+<table>
+	<tr>
+		<th>Name:</th>
+		<td>{{ batch.name}}</td>
+	</tr>
+	<tr>
+		<th>Start date:</th>
+		<td>{{batch.start_date}}</td>
+	</tr>
+	<tr>
+		<th>Start time:</th>
+		<td>{{batch.start_time}}</td>
+	</tr>
+</table>
+<svg width="960" height="500"></svg>
+
+<script>
+
+// Script for generating Student Performance chart
+// To change size, only change the height, width of the svg element above
+window.onload = function () {
+	var mod1 = "#e6550d";
+	var mod2 = "#756bb1";
+	var mod3 = "#31a354";
+
+	text = ""
+		fetch("/api/batch/{{batch.id}}/scores", {credentials: 'same-origin', method: 'GET'}).then( (res) => res.text().then( function (data) {text = data; createGraph()}) )
+
+		function createGraph() {
+
+			d = d3.csvParse(text)
+
+				var svg = d3.select("svg"),
+    		margin = {top: 20, right: 20, bottom: 30, left: 40},
+    		width = +svg.attr("width") - margin.left - margin.right,
+    		height = +svg.attr("height") - margin.top - margin.bottom;
+
+			var x = d3.scaleBand().rangeRound([0, width]).padding(0.1),
+    		y = d3.scaleLinear().rangeRound([height, 0]);
+
+			var g = svg.append("g")
+    			.attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+
+			grade = []
+				d.forEach( function(i) {
+					console.log(i)
+						grade.push(i.avg) 
+				})
+
+  			x.domain(d.map(function(d) { return d.module; }));
+  			y.domain([0, 9]);
+
+  			g.append("g")
+      			.attr("class", "axis axis--x")
+      			.attr("transform", "translate(0," + height + ")")
+      			.call(d3.axisBottom(x));
+
+  			g.append("g")
+      			.attr("class", "axis axis--y")
+      			.call(d3.axisLeft(y).ticks(9))
+    			.append("text")
+      			.attr("transform", "rotate(-90)")
+      			.attr("y", 6)
+      			.attr("dy", "0.71em")
+      			.attr("text-anchor", "end")
+      			.text("Frequency");
+
+  			g.selectAll(".bar")
+    			.data(d)
+    			.enter().append("rect")
+      			.attr("class", "bar")
+      			.attr("x", function(d) { return x(d.module); })
+      			.attr("y", function(d) { return y(d.avg); })
+      			.attr("width", x.bandwidth())
+				.attr("fill", (d) => { return mod1 })
+      			.attr("height", function(d) { return height - y(d.avg); });
+		}
+
+}
+
+
+
+
+
+</script>
+
+{% endblock %}
+
+
