--- a/app/Blueprints/site/templates/admin/batch/browse.html
+++ b/app/Blueprints/site/templates/admin/batch/browse.html
@@ -39,7 +39,7 @@
                 <td>{{batch.start_time}}</td>
                 <td>{{batch.duration}}</td>
                 <td>
-                  <a href="#">About</a>
+                  	<a href="/batch/about/{{batch.id}}">About</a>
                   <a href="/batch/delete/{{batch.id}}">Delete</a>
                   <a href="#">Update</a>
                 </td>
