--- a/app/Blueprints/site/templates/admin/student/browse.html
+++ b/app/Blueprints/site/templates/admin/student/browse.html
@@ -42,7 +42,7 @@
                       <td>{{student.email}}</td>
                       <td>{{student.mobile}}</td>
                       <td><a href="/student/{{student.id}}/about">Profile</a></td>
-					  <td><a href="#">Deactivate</a></td>
+					  <td><a href="/student/{{student.id}}/deactivate">Deactivate</a></td>
                   </tr>
               {% endfor %}
           </tbody>
