--- a/app/Blueprints/site/templates/admin/login.html
+++ b/app/Blueprints/site/templates/admin/login.html
@@ -13,7 +13,7 @@
   <div class="containerOne"></div>
 
   <div class="containerTwo">
-    <img src="{{url_for("static", filename = "img/logox500.png")}}" alt="logo">
+    <img src="{{url_for("static", filename = "img/Logox500.png")}}" alt="logo">
     <div class="ErrorMessage" style="display:none;">
       <p>{{msg}}</p>
     </div>
