--- a/app/Blueprints/site/templates/admin/batch/update.html
+++ b/app/Blueprints/site/templates/admin/batch/update.html
@@ -11,8 +11,8 @@
       <h3><i class="fas fa-chevron-right"></i>Create Batche</h3>
       <br><br>
       <div class="Board">
-        <span class="button"><a href="#"><i class="fas fa-user-friends"></i><p>Browse Batches</p></a></span>
-        <span class="button"><a href="#"><i class="fas fa-plus-circle"></i><p>Add Batch</p></a></span>
+        <span class="button"><a href="/batch/new"><i class="fas fa-plus-circle"></i><p>Add Batch</p></a></span>
+        <span class="button"><a href="/batch"><i class="fas fa-user-friends"></i><p>Browse Batches</p></a></span>
         <br><br><br>
 
         <p class="sub1"><i class="fas fa-chevron-right"></i>Create New Batch</p>
