--- a/app/Blueprints/site/templates/admin/course/add_course.html
+++ b/app/Blueprints/site/templates/admin/course/add_course.html
@@ -14,8 +14,8 @@
     <br><br>
 
     <div class="Board">
-      <span class="button"><a href="#"><i class="fas fa-plus-circle"></i><p>Add Courses</p></a></span>
-      <span class="button"><a href="#"><i class="fas fa-book-open"></i><p>Browse Courses</p></a></span>
+      <span class="button"><a href="/course/new"><i class="fas fa-plus-circle"></i><p>Add Courses</p></a></span>
+      <span class="button"><a href="/course"><i class="fas fa-book-open"></i><p>Browse Courses</p></a></span>
       <br><br><br>
       <p class="sub1"><i class="fas fa-chevron-right"></i>Add new Course</p>
       <br><br>
