--- a/app/Blueprints/site/templates/admin/student/student_registration.html
+++ b/app/Blueprints/site/templates/admin/student/student_registration.html
@@ -14,8 +14,8 @@
     <br><br>
 
     <div class="Board">
-      <span class="button"><a href="#"><i class="fas fa-plus-circle"></i><p>Add Student</p></a></span>
-      <span class="button"><a href="#"><i class="fas fa-user"></i><p>Browse Students</p></a></span>
+      <span class="button"><a href="/student/new"><i class="fas fa-plus-circle"></i><p>Add Student</p></a></span>
+      <span class="button"><a href="/student"><i class="fas fa-user"></i><p>Browse Students</p></a></span>
       <br><br><br>
       <p class="sub1"><i class="fas fa-chevron-right"></i>Register New Student</p>
       <br><br>
@@ -45,28 +45,4 @@
           });
       } );
   </script>
-<!-- <h1>Students</h1>
-    <ul>
-        <li><a href="/student">browse students</a></li>
-        <li><a href="#">new student</a></li>
-    </ul>
-
-    <h2>register new student</h2>
-    <form action="" method="post">
-
-        <div class="msg">
-            {{msg}}
-        </div>
-
-        <input type="text" placeholder="first name" name="fname" /><br><br>
-        <input type="text" placeholder="last name" name="lname" /><br><br>
-        <input type="email" placeholder="email" name="email" /><br><br>
-        <input type="text" placeholder="phone number" name="phone" /><br><br>
-        <input id="datepicker" name="DOB" placeholder="DOB"/><br><br>
-        <input type="text" name="RFID" placeholder="allot RFID" /><br><br>
-        <input type="text" name="source" placeholder="source" /><br><br>
-        <button>register</button>
-    </form>
-
- -->
 {% endblock %}
