--- a/app/Blueprints/site/templates/admin/batch/create_batch.html
+++ b/app/Blueprints/site/templates/admin/batch/create_batch.html
@@ -11,8 +11,8 @@
       <h3><i class="fas fa-chevron-right"></i>Create Batche</h3>
       <br><br>
       <div class="Board">
-        <span class="button"><a href="#"><i class="fas fa-user-friends"></i><p>Browse Batches</p></a></span>
-        <span class="button"><a href="#"><i class="fas fa-plus-circle"></i><p>Add Batch</p></a></span>
+        <span class="button"><a href="/batch/new"><i class="fas fa-plus-circle"></i><p>Add Batch</p></a></span>
+        <span class="button"><a href="/batch"><i class="fas fa-user-friends"></i><p>Browse Batches</p></a></span>
         <br><br><br>
 
         <p class="sub1"><i class="fas fa-chevron-right"></i>Create New Batch</p>
@@ -34,7 +34,7 @@
             <label><input type="checkbox" name="dayList[]" value="5"><span class="checkmark"></span> Saturday</label><br>
             <label><input type="checkbox" name="dayList[]" value="6"><span class="checkmark"></span> Sunday</label>
             <br>
-            <p style="font-size:18px;" class="sub1"><i class="fas fa-caret-right"></i>Select course</p>
+            <p style="font-size:18px;" class="sub1"><i class="fas fa-caret-right"></i>Select course <i style="font-size:14px;">(check any one)</i></p>
             <br>
             {% for course in courses %}
                 <label><input type="radio" name="course" value="{{course.id}}"><span class="checkmark"></span> {{course.name}}</label><br>
