--- a/app/Blueprints/site/templates/admin/master.html
+++ b/app/Blueprints/site/templates/admin/master.html
@@ -2,11 +2,12 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
-        <title>cafelingua admin</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>CafeLingua Admin</title>
+        <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
+        <meta name="viewport" content="width=1080, initial-scale=1">
         <link rel="shortcut icon" href="{{url_for("static", filename = "img/icon.png")}}" />
         <link rel="stylesheet" href="{{url_for("static", filename = "scss/admin.min.css")}}" />
-		<link rel="stylesheet" href="{{url_for("static", filename = "css/css_for_charts.css")}}" />
+		    <link rel="stylesheet" href="{{url_for("static", filename = "css/css_for_charts.css")}}" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css">
         <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.css">
 
@@ -34,7 +35,7 @@
             </div>
           </div>
         </div>
-		<div style="float: right">
+		<div>
         {% block body %}
 
         {% endblock %}
