--- a/app/Blueprints/site/templates/admin/module/update_module.html
+++ b/app/Blueprints/site/templates/admin/module/update_module.html
@@ -14,6 +14,7 @@
     <br><br>
 
     <div class="Board">
+      <span class="button"><a href="/module/new"><i class="fas fa-plus-circle"></i><p>Add Module</p></a></span>
       <span class="button"><a href="/module"><i class="fas fa-bookmark"></i><p>Browse Modules</p></a></span>
       <br><br><br>
       <p class="sub1"><i class="fas fa-chevron-right"></i>update {{module.name}}</p>
