--- a/app/Blueprints/site/templates/admin/test/about.html
+++ b/app/Blueprints/site/templates/admin/test/about.html
@@ -3,9 +3,7 @@
 
   <div class="TestAbout">
     <div class="UserDetail">
-      <h3>Dr. Deepak Mashru</h3>
-      <img src="https://0.academia-photos.com/6365507/3086920/3632179/s200_deepak.mashru.jpg" alt="">
-      <!-- <p><i class="fas fa-angle-down"></i></p> -->
+      <h3>{{username}}</h3>
     </div>
 
     <div class="Title">
