Tell Me Somthing

--- a/app/Blueprints/site/templates/admin/master.html
+++ b/app/Blueprints/site/templates/admin/master.html
@@ -23,7 +23,8 @@
           <div class="MenuPanel tab">
             <img src="{{url_for("static", filename = "img/Logox500.png")}}" alt="logo">
             <div class="Menu">
-                <p>{{username}}</p>
+              <p class="UName">{{username}}</p>
+              <hr>
               <a href="/admin/dashboard"><i class="fas fa-clipboard"></i><p>Dashboard</p></a>
               <a href="/student"><i class="fas fa-user"></i><p>Student</p></a>
               <a href="/batch"><i class="fas fa-users"></i><p>Batches</p></a>
@@ -37,10 +38,8 @@
           </div>
         </div>
 		<div>
-
-        {% block body %}
-
-        {% endblock %}
+      {% block body %}
+      {% endblock %}
 		</div>
     </body>
 </html>
