--- a/app/Blueprints/site/templates/admin/batch/about.html
+++ b/app/Blueprints/site/templates/admin/batch/about.html
@@ -7,28 +7,47 @@
 {% endblock %}
 
 {% block body %}
-<h2> Batch {{ batch.name }} </h2>
 
-<table>
-	<tr>
-		<th>Name:</th>
-		<td>{{ batch.name}}</td>
-	</tr>
-	<tr>
-		<th>Start date:</th>
-		<td>{{batch.start_date}}</td>
-	</tr>
-	<tr>
-		<th>Start time:</th>
-		<td>{{batch.start_time}}</td>
-	</tr>
-</table>
-<div>
-<svg width="960" height="500" id="svg_test"></svg>
+<div class="BatchesAbout">
+	<div class="Title">
+		<h3><i class="fas fa-chevron-right"></i>Batches</h3>
+	</div>
+	<br><br>
+	<div class="Board">
+		<span class="button"><a href="/batch/new"><i class="fas fa-plus-circle"></i><p>Add Batch</p></a></span>
+		<!-- <span class="button"><a href="/batch"><i class="fas fa-user-friends"></i><p>Browse Batches</p></a></span> -->
+		<br><br><br>
+		<p class="sub1"><i class="fas fa-chevron-right"></i>About Batch {{ batch.name }}</p>
+		<br><br>
+		<table class="about">
+				<tr>
+						<th><p>Name</p></th>
+						<td><p>{{batch.name}}</p></td>
+				</tr>
+				<tr>
+						<th><p>Start Date</p></th>
+						<td><p>{{batch.start_date}}</p></td>
+				</tr>
+				<tr>
+						<th><p>Start Time</p></th>
+						<td><p>{{batch.start_time}}</p></td>
+				</tr>
+		</table>
+		<br><br>
+		<div>
+			<p class="sub1"><i class="fas fa-chevron-right"></i>Performance :</p>
+			<svg width="960" height="500" id="svg_test"></svg>
+		</div>
+		<br><br>
+		<div>
+			<p class="sub1"><i class="fas fa-chevron-right"></i>Performance :</p>
+			<svg width="960" height="500" id="svg_module"></svg>
+		</div>
+	</div>
 </div>
-<div>
-<svg width="960" height="500" id="svg_module"></svg>
-</div>
+
+
+
 <script>
 
 // Script for generating Student Performance chart
@@ -59,7 +78,7 @@ window.onload = function () {
 			grade = []
 				d.forEach( function(i) {
 					console.log(i)
-						grade.push(i.avg) 
+						grade.push(i.avg)
 				})
 
   			x.domain(d.map(function(d) { return d.module; }));
@@ -112,7 +131,7 @@ window.onload = function () {
 			grade = []
 				d.forEach( function(i) {
 					console.log(i)
-						grade.push(i.avg) 
+						grade.push(i.avg)
 				})
 
   			x.domain(d.map(function(d) { return d.module; }));
@@ -154,5 +173,3 @@ window.onload = function () {
 </script>
 
 {% endblock %}
-
-
