--- a/app/Blueprints/site/static/scss/admin.scss
+++ b/app/Blueprints/site/static/scss/admin.scss
@@ -2345,3 +2345,144 @@ $areaWidth: 75%;
     }
   }
 }
+
+
+.GradingTest{
+  @extend %BoardShared;
+
+  .Board{
+    span.button{
+      display: inline-block;
+      vertical-align: top;
+      padding: 0 20px;
+
+      &:nth-child(1){
+        padding: 0 0px;
+      }
+      a{
+        text-decoration: none;
+        background-color: #424242;
+        padding-bottom: 20px;
+        color: #fff;
+        height: 100px;
+        text-transform: uppercase;
+        border-radius: 5px;
+        transition: all 0.2s;
+        i{
+          display: inline-block;
+          vertical-align: top;
+          padding: 12px 10px 11px 10px;
+          border-top-right-radius: 30%;
+          border-bottom-right-radius: 30%;
+          background-color: rgba(255,255,255,0.2);
+        }
+        p{
+          display: inline-block;
+          vertical-align: top;
+          padding: 10px 10px 0 10px;
+          letter-spacing: 0.8px;
+        }
+
+        &:hover{
+          background-color: #fff;
+          color:#424242;
+          box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .15);
+        }
+      }
+    }
+
+    .sub1{
+      font-size: 20px;
+      color: #424242;
+      i{
+        color: $right-color;
+        padding-right: 10px;
+      }
+    }
+
+    form{
+      table{
+        border-spacing: 0 0;
+        border: 1px solid #424242;
+        margin-left: 20px;
+        thead{
+          tr{
+            th{
+              border: 1px solid #424242;
+              padding: 10px 0;
+              text-align: center;
+              font-size: 18px;
+              background-color: $lingua-color;
+              color: #fff;
+
+              &:nth-child(1){
+                text-align: left;
+                padding-left: 10px;
+                padding: 10px;
+                min-width: 220px;
+              }
+              &:nth-child(2){
+                width: 200px;
+              }
+            }
+          }
+        }
+        tbody{
+          tr{
+            td{
+              border: 1px solid #424242;
+              padding: 6px;
+              font-size: 16px;
+              color: #424242;
+
+              &:nth-child(2){
+                padding: 5px 0 5px 10px;
+                input{
+                  &[type="text"]{
+                    border: 1px solid $coffee-color;
+                    width: 100%;
+                    margin: 7px 0;
+                    border: 0;
+                    color: #424242;
+                    font-size: 18px;
+                    background-color: transparent;
+
+                    &::placeholder{
+                      opacity: 0.5;
+                      font-size: 14px;
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+      button{
+        margin: 30px 0 0 20px;
+        padding: 10px;
+        width: 300px;
+        border: none;
+        border-radius: 5px;
+        background-color: $right-color;
+        color: #fff;
+        font-size: 20px;
+        text-transform: uppercase;
+        border: 2px solid rgba(0,0,0,0);
+        transition: all 0.2s;
+
+        i{
+          padding: 0 10px;
+        }
+
+        &:hover{
+          box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .15);
+          cursor: pointer;
+          background: #fff;
+          color: $right-color;
+          transition: all 0.2s;
+        }
+      }
+    }
+  }
+}
